...
                        discretionaryExpenses: discretionaryExpenses,
                        necessaryExpensesInPeriod: necessaryExpensesInPeriod,
                        discretionaryExpensesInPeriod: discretionaryExpensesInPeriod
                    )
                }

                Section(header: sectionHeader("Necessary Expenses", type: NECESSARY)) {
                    SummaryView(expenses: necessaryExpensesInPeriod, label: "Necessary", budget: necessaryBudget)
                    Heading(sortState: $necessarySort)
                    if necessaryExpenses.isEmpty {
                        Text("No expenses yet")
                            .font(.caption)
                            .foregroundStyle(.secondary)
...
                                showingAddEntry = true
                            }
                        }.onDelete { offsets in delete(from: sorted(necessaryExpenses, by: necessarySort), at: offsets) }
                    }
                }

                Section(header: sectionHeader("Discretionary Expenses", type: DISCRETIONARY)) {
                    SummaryView(expenses: discretionaryExpensesInPeriod, label: "Discretionary", budget: discretionaryBudget)
                    Heading(sortState: $discretionarySort)
                    if discretionaryExpenses.isEmpty {
                        Text("No expenses yet")
                            .font(.caption)
                            .foregroundStyle(.secondary)
...
