...
                            }
                        }
                        Button {
                            showMediationsView = true
                        } label: {
                            HStack {
                                Text("Reflections")
                                Spacer()
                                Image(systemName: "chevron.right")
                                    .foregroundColor(.secondary)
                            }
                        }
                        Button {
...
