...
            .scrollDismissesKeyboard(.interactively)
            .onAppear {
                if messageToReflectOn.isEmpty {
                    messageToReflectOn = mediations.randomElement()?.text ?? "Take a moment to reflect on this purchase."
                }
            }
            .navigationTitle("Expense Editor")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button("Done") {
                        saveActivity()
                        dismiss()
...
